--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,9 @@
 version 1.0.0
 * First version of Progress Knight Quest Rebalanced
-* Made task maxlevel not reset to zero, instead a percentage of the previous maxlevel based on your current evil
+* Made task maxlevel not reset to zero, instead a percentage (upto 25%) of the previous maxlevel based on your current evil
 * Lowered cost of evil perks
 * Increased evil perk point gain (increases with natural log instead of base 10)
-* Made Time Warping increase Gamespeed more in early game (increases with natural log instead of base 10)
+* Time Warping increases Gamespeed more (increases with cube root instead of log10)
 
 
 ***** Progress Knight Quest Changelog *****
